--- a/index.html
+++ b/index.html
@@ -1,53 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Hit Play Shows History</title>
-
-<!-- TailwindCSS CDN -->
-<script src="https://cdn.tailwindcss.com"></script>
-
-<style>
-/* Make rows structured */
-.event-row {
-    display: grid;
-    grid-template-columns: 150px 1fr 1fr 150px;
-    gap: 1rem;
-}
-@media(max-width: 900px){
-    .event-row {
-        grid-template-columns: 1fr;
-    }
-}
-</style>
-
-</head>
-
-<body class="bg-gray-100 text-gray-900">
-
-<header class="bg-gray-900 text-white py-8 text-center shadow">
-    <h1 class="text-4xl font-bold tracking-wide">Hit Play Shows History</h1>
-</header>
-
-<div class="max-w-6xl mx-auto p-6">
-    
-    <div class="bg-white shadow-md rounded-lg overflow-hidden">
-        
-        <!-- Header Row -->
-        <div class="hidden md:grid event-row bg-gray-800 text-white py-3 px-4 text-sm font-semibold">
-            <div>Date</div>
-            <div>City / Venue</div>
-            <div>Other Bands</div>
-            <div>Price</div>
-        </div>
-
-        <div id="events"></div>
-    </div>
-
-</div>
-
-
 <script>
 // -------------------------
 // EVENT DATA
@@ -78,13 +28,13 @@ const events = [
     { date: "07.07.2013", city: "Miami, FL", venue: "Miami Airport Convention Center", lineup: "Green Jelly + Others", price: "Prices Vary" }
 ];
 
-// Convert MM.DD.YYYY → JS Date
+// Convert MM.DD.YYYY → JS Date safely
 function parseDate(d) {
     const [m, day, y] = d.split(".");
-    return new Date(`${y}-${m}-${day}`);
+    return new Date(Number(y), Number(m) - 1, Number(day));
 }
 
-// Sort newest → oldest
+// FORCE newest → oldest
 events.sort((a, b) => parseDate(b.date) - parseDate(a.date));
 
 // Render rows
@@ -112,6 +62,3 @@ events.forEach(ev => {
     container.appendChild(row);
 });
 </script>
-
-</body>
-</html>
