--- a/index.html
+++ b/index.html
@@ -2,103 +2,210 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<title>Florida Punk Archivist</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Hit Play - Videos</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
 
 <style>
-    body {
-        margin: 0;
-        padding: 0;
-        background: #000;
-        color: #fff;
-        font-family: Arial, sans-serif;
+* { margin:0; padding:0; box-sizing:border-box; }
+body { 
+  font-family:'Bebas Neue', Arial, sans-serif; 
+  background:#000; 
+  color:#fff; 
+  text-align:center; 
+}
 
-        /* --- TEXTURED BACKGROUND --- */
-        background-color: #000;
-        background-image:
-            /* Larger blotchy noise */
-            radial-gradient(circle at 20% 30%, rgba(255,255,255,0.04) 0%, transparent 60%),
-            radial-gradient(circle at 80% 70%, rgba(255,255,255,0.04) 0%, transparent 60%),
-            /* Fine noise */
-            repeating-linear-gradient(
-                45deg,
-                rgba(255,255,255,0.018) 0,
-                rgba(255,255,255,0.018) 1px,
-                transparent 1px,
-                transparent 2px
-            );
+.hero { padding:2rem; }
+.hero-logo { width:200px; max-width:70%; display:block; margin:0 auto; }
 
-        background-blend-mode: overlay;
-        background-size: cover;
+.videos-section { background:#111; padding:1rem; }
+.videos-section h2 { font-size:2.3rem; margin-bottom:1rem; }
 
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        height: 100dvh;
-        text-align: center;
-    }
+.video-list {
+  display:grid;
+  gap:1rem;
+  grid-template-columns:1fr;
+  padding:0 1rem;
+}
 
-    a {
-        text-decoration: none;
-        color: white;
-    }
+@media (min-width:480px){ .video-list { grid-template-columns:repeat(2,1fr); } }
+@media (min-width:768px){ .video-list { grid-template-columns:repeat(3,1fr); } }
+@media (min-width:1024px){ .video-list { grid-template-columns:repeat(4,1fr); } }
 
-    .logo {
-        width: min(150px, 40vw);
-        margin-bottom: 30px;
-        transition: transform 0.2s ease;
-    }
+.video-item { 
+  position:relative; 
+  border-radius:10px; 
+  overflow:hidden; 
+  background:#000; 
+  cursor:pointer; 
+}
 
-    .logo:hover {
-        transform: scale(1.08);
-    }
+.video-thumb, iframe { 
+  width:100%; 
+  aspect-ratio:16/9; 
+  object-fit:cover; 
+  border-radius:10px; 
+}
 
-    .title {
-        font-weight: bold;
-        letter-spacing: 1px;
-        font-size: clamp(1.5rem, 4vw, 2.5rem);
-        padding: 10px 20px;
-        display: inline-block;
-    }
+.play-overlay {
+  position:absolute; 
+  top:50%; left:50%; 
+  transform:translate(-50%,-50%); 
+  font-size:3rem; 
+  color:rgba(255,255,255,0.85); 
+  pointer-events:none; 
+  text-shadow:0 0 20px #000;
+}
 
-    @media (max-width: 600px) {
-        .title {
-            padding: 12px 24px;
-        }
-        .logo {
-            margin-bottom: 24px;
-        }
-    }
+.video-title {
+  position:absolute; 
+  bottom:0; left:0; 
+  width:100%;
+  padding:0.3rem 0.5rem;
+  font-size:0.9rem;
+  background:linear-gradient(to top, rgba(0,0,0,0.7), transparent);
+  border-bottom-left-radius:10px;
+  border-bottom-right-radius:10px;
+}
 
-    @media (max-height: 500px) and (orientation: landscape) {
-        body {
-            padding-top: 20px;
-            padding-bottom: 20px;
-        }
-        .logo {
-            width: min(120px, 25vw);
-        }
-        .title {
-            font-size: clamp(1.2rem, 3vw, 2rem);
-        }
-    }
+.footer { padding:2rem 1rem; font-size:1.2rem; }
+.footer a { color:#00aaff; text-decoration:none; }
+.footer a:hover { text-decoration:underline; }
+
+button {
+  margin:2rem 0;
+  padding:0.7rem 1.5rem;
+  font-size:1.3rem;
+  cursor:pointer;
+  border:none;
+  color:#fff;
+  background:#222;
+  border-radius:6px;
+}
+button:hover { background:#333; }
 </style>
 </head>
-
 <body>
 
-<a href="https://www.youtube.com/@floridapunkarchivist" target="_blank">
-    <svg class="logo" viewBox="0 0 90 63" xmlns="http://www.w3.org/2000/svg">
-        <rect width="90" height="63" rx="14" fill="#FF0000"/>
-        <polygon points="36,18 64,31.5 36,45" fill="white"/>
-    </svg>
-</a>
+<!-- Hero / Channel Logo -->
+<div class="hero" id="heroLogoContainer"></div>
 
-<a href="https://www.youtube.com/@floridapunkarchivist" class="title" target="_blank">
-    florida punk archivist
-</a>
+<!-- Videos Section -->
+<div class="videos-section">
+  <h2>VIDEOS</h2>
+  <div id="videoList" class="video-list"></div>
+
+  <button id="loadMoreBtn">Load Next Video</button>
+</div>
+
+<!-- Footer -->
+<div class="footer">
+  More from the 
+  <a href="https://www.youtube.com/@floridapunkarchivist" target="_blank">
+    Florida Punk Archivist
+  </a>
+</div>
+
+<script>
+const API_KEY = "YOUR_API_KEY_HERE"; 
+const CHANNEL_ID = "UC63N1yWiGhzL2E9hcfFDJoQ";
+
+let nextPageToken = "";
+let loading = false;
+
+const videoList = document.getElementById("videoList");
+const heroLogoContainer = document.getElementById("heroLogoContainer");
+const loadMoreBtn = document.getElementById("loadMoreBtn");
+
+/* Lazy load images */
+const lazyObserver = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if (entry.isIntersecting) {
+      const img = entry.target;
+      if (img.dataset.src) {
+        img.src = img.dataset.src;
+        img.removeAttribute("data-src");
+      }
+      lazyObserver.unobserve(img);
+    }
+  });
+}, { rootMargin: "200px 0px" });
+
+/* Load channel logo once */
+async function loadChannelLogo() {
+  try {
+    const res = await fetch(
+      `https://www.googleapis.com/youtube/v3/channels?part=snippet&id=${CHANNEL_ID}&key=${API_KEY}`
+    );
+    const data = await res.json();
+    const logoUrl = data.items?.[0]?.snippet?.thumbnails?.high?.url;
+    if (!logoUrl) return;
+
+    const img = document.createElement("img");
+    img.src = logoUrl;
+    img.className = "hero-logo";
+    heroLogoContainer.appendChild(img);
+  } catch (err) {
+    console.error(err);
+  }
+}
+
+/* Load ONE video per API call */
+async function loadOneVideo() {
+  if (loading) return;
+  loading = true;
+
+  const url = `https://www.googleapis.com/youtube/v3/search?key=${API_KEY}&channelId=${CHANNEL_ID}&part=snippet,id&type=video&order=date&maxResults=1&pageToken=${nextPageToken}`;
+
+  try {
+    const res = await fetch(url);
+    const data = await res.json();
+
+    nextPageToken = data.nextPageToken || "";
+
+    const item = data.items?.[0];
+    if (!item) return;
+
+    const vid = item.id.videoId;
+    const title = item.snippet.title;
+    const thumbUrl = item.snippet.thumbnails.high.url;
+
+    const container = document.createElement("div");
+    container.className = "video-item";
+
+    container.innerHTML = `
+      <img class="video-thumb" data-src="${thumbUrl}">
+      <div class="play-overlay">▶</div>
+      <div class="video-title">${title}</div>
+    `;
+
+    videoList.appendChild(container);
+    lazyObserver.observe(container.querySelector(".video-thumb"));
+
+    container.addEventListener("click", () => {
+      container.innerHTML = `
+        <iframe 
+          src="https://www.youtube.com/embed/${vid}?autoplay=1"
+          allowfullscreen
+        ></iframe>
+      `;
+    });
+
+  } catch (err) {
+    console.error("API error:", err);
+  }
+
+  loading = false;
+}
+
+/* Load next on button click */
+loadMoreBtn.addEventListener("click", loadOneVideo);
+
+/* Initial load */
+loadChannelLogo();
+loadOneVideo();
+</script>
 
 </body>
 </html>
