--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ button:hover { background:#333; }
 </div>
 
 <script>
-const API_KEY = "YOUR_API_KEY_HERE"; 
+const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8"; 
 const CHANNEL_ID = "UC63N1yWiGhzL2E9hcfFDJoQ";
 
 let nextPageToken = "";
