--- a/index.html
+++ b/index.html
@@ -1,210 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Hit Play - Videos</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
-
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>YouTube API Test</title>
 <style>
-* { margin:0; padding:0; box-sizing:border-box; }
-body { 
-  font-family:'Bebas Neue', Arial, sans-serif; 
-  background:#000; 
-  color:#fff; 
-  text-align:center; 
-}
-
-.hero { padding:2rem; }
-.hero-logo { width:200px; max-width:70%; display:block; margin:0 auto; }
-
-.videos-section { background:#111; padding:1rem; }
-.videos-section h2 { font-size:2.3rem; margin-bottom:1rem; }
-
-.video-list {
-  display:grid;
-  gap:1rem;
-  grid-template-columns:1fr;
-  padding:0 1rem;
-}
-
-@media (min-width:480px){ .video-list { grid-template-columns:repeat(2,1fr); } }
-@media (min-width:768px){ .video-list { grid-template-columns:repeat(3,1fr); } }
-@media (min-width:1024px){ .video-list { grid-template-columns:repeat(4,1fr); } }
-
-.video-item { 
-  position:relative; 
-  border-radius:10px; 
-  overflow:hidden; 
-  background:#000; 
-  cursor:pointer; 
-}
-
-.video-thumb, iframe { 
-  width:100%; 
-  aspect-ratio:16/9; 
-  object-fit:cover; 
-  border-radius:10px; 
-}
-
-.play-overlay {
-  position:absolute; 
-  top:50%; left:50%; 
-  transform:translate(-50%,-50%); 
-  font-size:3rem; 
-  color:rgba(255,255,255,0.85); 
-  pointer-events:none; 
-  text-shadow:0 0 20px #000;
-}
-
-.video-title {
-  position:absolute; 
-  bottom:0; left:0; 
-  width:100%;
-  padding:0.3rem 0.5rem;
-  font-size:0.9rem;
-  background:linear-gradient(to top, rgba(0,0,0,0.7), transparent);
-  border-bottom-left-radius:10px;
-  border-bottom-right-radius:10px;
-}
-
-.footer { padding:2rem 1rem; font-size:1.2rem; }
-.footer a { color:#00aaff; text-decoration:none; }
-.footer a:hover { text-decoration:underline; }
-
-button {
-  margin:2rem 0;
-  padding:0.7rem 1.5rem;
-  font-size:1.3rem;
-  cursor:pointer;
-  border:none;
-  color:#fff;
-  background:#222;
-  border-radius:6px;
-}
-button:hover { background:#333; }
+  body { 
+    display:flex; 
+    flex-direction:column;
+    justify-content:center; 
+    align-items:center; 
+    height:100vh; 
+    background:#000; 
+    color:#fff; 
+    font-family:Arial,sans-serif; 
+    font-size:1.8rem; 
+    text-align:center;
+    padding:1rem;
+  }
+  .success { color:#4caf50; }
+  .error { color:#f44336; }
 </style>
 </head>
 <body>
 
-<!-- Hero / Channel Logo -->
-<div class="hero" id="heroLogoContainer"></div>
-
-<!-- Videos Section -->
-<div class="videos-section">
-  <h2>VIDEOS</h2>
-  <div id="videoList" class="video-list"></div>
-
-  <button id="loadMoreBtn">Load Next Video</button>
-</div>
-
-<!-- Footer -->
-<div class="footer">
-  More from the 
-  <a href="https://www.youtube.com/@floridapunkarchivist" target="_blank">
-    Florida Punk Archivist
-  </a>
-</div>
+<div id="status">Checking YouTube API...</div>
 
 <script>
-const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8"; 
-const CHANNEL_ID = "UC63N1yWiGhzL2E9hcfFDJoQ";
+  const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8";   // <-- insert your key here
+  const CHANNEL_ID = "UC63N1yWiGhzL2E9hcfFDJoQ";
+  const statusDiv = document.getElementById("status");
 
-let nextPageToken = "";
-let loading = false;
+  async function checkYouTubeAPI() {
+    try {
+      const res = await fetch(`https://www.googleapis.com/youtube/v3/channels?part=snippet&id=${CHANNEL_ID}&key=${API_KEY}`);
+      const data = await res.json();
 
-const videoList = document.getElementById("videoList");
-const heroLogoContainer = document.getElementById("heroLogoContainer");
-const loadMoreBtn = document.getElementById("loadMoreBtn");
-
-/* Lazy load images */
-const lazyObserver = new IntersectionObserver(entries => {
-  entries.forEach(entry => {
-    if (entry.isIntersecting) {
-      const img = entry.target;
-      if (img.dataset.src) {
-        img.src = img.dataset.src;
-        img.removeAttribute("data-src");
+      if (res.ok && data.items && data.items.length > 0) {
+        statusDiv.textContent = "Success ✅ YouTube API is working!";
+        statusDiv.className = "success";
+      } else {
+        const errorMsg = data.error?.message || "Unknown error";
+        statusDiv.textContent = `Unsuccessful ❌: ${errorMsg}`;
+        statusDiv.className = "error";
       }
-      lazyObserver.unobserve(img);
+    } catch (err) {
+      console.error(err);
+      statusDiv.textContent = `Unsuccessful ❌: ${err.message}`;
+      statusDiv.className = "error";
     }
-  });
-}, { rootMargin: "200px 0px" });
-
-/* Load channel logo once */
-async function loadChannelLogo() {
-  try {
-    const res = await fetch(
-      `https://www.googleapis.com/youtube/v3/channels?part=snippet&id=${CHANNEL_ID}&key=${API_KEY}`
-    );
-    const data = await res.json();
-    const logoUrl = data.items?.[0]?.snippet?.thumbnails?.high?.url;
-    if (!logoUrl) return;
-
-    const img = document.createElement("img");
-    img.src = logoUrl;
-    img.className = "hero-logo";
-    heroLogoContainer.appendChild(img);
-  } catch (err) {
-    console.error(err);
-  }
-}
-
-/* Load ONE video per API call */
-async function loadOneVideo() {
-  if (loading) return;
-  loading = true;
-
-  const url = `https://www.googleapis.com/youtube/v3/search?key=${API_KEY}&channelId=${CHANNEL_ID}&part=snippet,id&type=video&order=date&maxResults=1&pageToken=${nextPageToken}`;
-
-  try {
-    const res = await fetch(url);
-    const data = await res.json();
-
-    nextPageToken = data.nextPageToken || "";
-
-    const item = data.items?.[0];
-    if (!item) return;
-
-    const vid = item.id.videoId;
-    const title = item.snippet.title;
-    const thumbUrl = item.snippet.thumbnails.high.url;
-
-    const container = document.createElement("div");
-    container.className = "video-item";
-
-    container.innerHTML = `
-      <img class="video-thumb" data-src="${thumbUrl}">
-      <div class="play-overlay">▶</div>
-      <div class="video-title">${title}</div>
-    `;
-
-    videoList.appendChild(container);
-    lazyObserver.observe(container.querySelector(".video-thumb"));
-
-    container.addEventListener("click", () => {
-      container.innerHTML = `
-        <iframe 
-          src="https://www.youtube.com/embed/${vid}?autoplay=1"
-          allowfullscreen
-        ></iframe>
-      `;
-    });
-
-  } catch (err) {
-    console.error("API error:", err);
   }
 
-  loading = false;
-}
-
-/* Load next on button click */
-loadMoreBtn.addEventListener("click", loadOneVideo);
-
-/* Initial load */
-loadChannelLogo();
-loadOneVideo();
+  // Automatically check API on page load
+  checkYouTubeAPI();
 </script>
 
 </body>
